Fixes dark mode not set well on page load. Adds style on menu navigation

--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -8,6 +8,11 @@
     display: block;
     margin-left: 10px;
   }
+
+  .hasSeparator {
+    border-left: 1px solid white;
+    padding-left: 10px;
+  }
 }
 
 .selected-language a {
